# nfp

./: .gitignore
nfp/: main.py  pyproject.toml  runComand.txt
nfp-backend/: runComand.txt
nfp-backend/alembic/versions/: 0e0734f48edb_add_device_columns.py  6efb167b8fea_add_device_columns.py  88c8c7ba0c7b_add_device_columns.py  923eb25eef2c_added_devices_table.py  c5b22615e648_added_chamber_colum_table.py  c69413c93fb8_add_device_columns_1.py
nfp-backend/app/: app.py  database.py  models.py
nfp-backend/app/routers/: DeviceRoutes.py  DoctorRoutes.py  LeadRoutes.py
nfp-frontend/: package-lock.json  package.json  runCommand.txt
nfp-frontend/.next/: trace
nfp-frontend/.next/cache/: config.json
nfp-frontend/.next/cache/webpack/client-development/: 1.pack  index.pack  index.pack.old
nfp-frontend/.next/cache/webpack/server-development/: 0.pack  1.pack  index.pack  (+1 more)
nfp-frontend/.next/server/pages/: _app.js  _document.js  _error.js
nfp-frontend/.next/static/chunks/: webpack.js
nfp/alembic/: env.py
nfp/alembic/versions/: 0d4ef8552c62_added_doctorstable.py  12f880669915_create_devices_table.py  3fcf8ec61ee2_add_device_columns.py  53abe20122f5_create_notes_table.py  85403cb632f7_added_leads_table.py  cd1d90220267_added_devices_table.py  d22e4af71183_add_device_columns.py  d7ea55450205_added_chamber_colum_table.py  f6d7796474e3_add.py
nfp/app/: app.py  database.py
nfp/app/routers/: DeviceRoutes.py  LeadRoutes.py
nfp/app/templates/components/: navbar.html
nfp/app/templates/general_pages/: home.html
nfp/app/templates/shared/: _layout.html
(+1 files in other folders)
